ensure to use .getConstructor().newInstance() instead of newInstance() (newInstance() is deprecated in j9)